<resources>
    <string name="app_name">BakeApp</string>
    <string name="count_prime_numbers">&#160;Count Prime Numbers&#160;</string>
    <string name="send_to_database">&#160;Send To DataBase&#160;</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>

    <string name="MaxQ">Maximum number =&#160;</string>
    <string name="DecMax">9 223 372 036 854 775 807</string>
    <string name="cancel_counting_primes">&#160;Cancel Counting Primes&#160;</string>
    <string name="canceled">&#160;Canceled&#160;</string>
    <string name="result">Result</string>

    <string name="prefs_theme_key">theme</string>
</resources>